done get org dashboard logs
