# routes/organization.go
@@ -11,8 +11,8 @@ func setupGroupOrganization(r *gin.RouterGroup) {
 	organizationGroup := r.Group("/organizations", middleware.RequiredAuth)
 	{
 		organizationGroup.GET("/", controllers.GetOrganizationInformation)
-		organizationGroup.GET("/dashboard/logs", controllers.GetOrganizationInformation)
-		organizationGroup.GET("/dashboard/totals", controllers.GetOrganizationDashboardTotals)
+		organizationGroup.GET("/dashboard/logs", middleware.RequiredIsOrgAdmin, controllers.GetOrganizationDashboardLogs)
+		organizationGroup.GET("/dashboard/totals", middleware.RequiredIsOrgAdmin, controllers.GetOrganizationDashboardTotals)
 		organizationGroup.PUT("/:organization_id", middleware.RequiredIsOrgAdmin, controllers.UpdateOrganizationInformation)
 	}
 }
